--- a/app/src/main/res/layout/passenger_recycler_item.xml
+++ b/app/src/main/res/layout/passenger_recycler_item.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp"
+    android:background="@android:color/darker_gray">
 
     <TextView
         android:id="@+id/nameTV"
